--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-search-bar (checkEnteredText)="checkInput($event)"></app-search-bar>
 <div>
   <a [routerLink]="['/GOOG']">Google</a>
   <a [routerLink]="['/SPY']">S&P500</a>
