--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -1,4 +1,15 @@
-<p>stock works!</p>
-<div class="search-bar"></div>
 <a [routerLink]="['']">Return Home</a>
-<img [src]="pic" alt="Stock Logo" />
+
+@if (!data) {
+<h1>LOADING...</h1>
+} @else {
+<p><strong>Ticker:</strong> {{ data.results.ticker }}</p>
+<p><strong>Market:</strong> {{ data.results.market }}</p>
+<p><strong>Description:</strong> {{ data.results.description }}</p>
+<p>
+  <strong>Homepage:</strong>
+  <a [href]="data.results.homepage_url" target="_blank">{{
+    data.results.homepage_url
+  }}</a>
+</p>
+}
