--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="['']">Return Home</a>
 @if (data1.length && dataXaxis.length) {
 <app-graph [data1]="data1" [data2]="data2" [dataXaxis]="dataXaxis"></app-graph>
-
+<app-search-bar (checkEnteredText)="submitInput($event)"></app-search-bar>
 } @if (!data) {
 <h1>LOADING...</h1>
 } @else {
