--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -11,6 +11,7 @@
 } @if (!data) {
 <h1>LOADING...</h1>
 } @else {
+<p><strong>Name:</strong> {{ data.results.name }}</p>
 <p><strong>Ticker:</strong> {{ data.results.ticker }}</p>
 <p><strong>Market:</strong> {{ data.results.market }}</p>
 <p><strong>Description:</strong> {{ data.results.description }}</p>
