add btns to change duration

--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -7,6 +7,10 @@
   [dataName1]="nameTicker1"
   [dataName2]="nameTicker2"
 ></app-graph>
+<button (click)="updateDuration('oneDay')">1 Day</button>
+<button (click)="updateDuration('fiveDays')">5 Days</button>
+<button (click)="updateDuration('oneMonth')">1 Month</button>
+<button (click)="updateDuration('threeMonths')">3 Months</button>
 <app-search-bar (checkEnteredText)="submitInput($event)"></app-search-bar>
 } @if (!data) {
 <h1>LOADING...</h1>
