successfully added component

--- a/src/app/components/thumbnail-article/thumbnail-article.component.html
+++ b/src/app/components/thumbnail-article/thumbnail-article.component.html
@@ -1,1 +1,4 @@
-<p>thumbnail-article works!</p>
+<a target="_blank" href="{{ url() }} ">
+  <img width="100" height="100" ngSrc="{{ imageUrl() }}" />
+  <h3>{{ title() }}</h3>
+</a>
