--- a/src/app/components/thumbnail-article/thumbnail-article.component.html
+++ b/src/app/components/thumbnail-article/thumbnail-article.component.html
@@ -1,4 +1,4 @@
 <a target="_blank" href="{{ url() }} ">
-  <img width="100" height="100" ngSrc="{{ imageUrl() }}" />
+  <img src="{{ imageUrl() }}" />
   <h3>{{ title() }}</h3>
 </a>
