--- a/src/app/components/thumbnail-article/thumbnail-article.component.css
+++ b/src/app/components/thumbnail-article/thumbnail-article.component.css
@@ -1,10 +1,7 @@
-article {
-  width: 1000px;
-  height: 700px;
-  border: 1px solid black;
+a {
+  text-decoration: none;
 }
 img {
-  width: 200px;
-  height: 200px;
-  object-fit: "cover";
+  object-fit: cover;
+  height: auto;
 }
