--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -1,4 +1,3 @@
-<a [routerLink]="['']">Return Home</a>
 @if (data1.length && dataXaxis.length) {
 <app-graph
   [data1]="data1"
@@ -25,10 +24,15 @@
     data.results.homepage_url
   }}</a>
 </p>
-} @if (dataArticle().length) { @for (item of dataArticle(); track $index) {
-<app-thumbnail-article
-  [title]="item.title"
-  [imageUrl]="item.image_url"
-  [url]="item.url"
-></app-thumbnail-article>
-}}
+} @if (dataArticle().length) {
+<div class="containerNews">
+  @for (item of dataArticle(); track $index) {
+  <app-thumbnail-article
+    [title]="item.title"
+    [imageUrl]="item.image_url"
+    [url]="item.url"
+    [description]="item.description"
+  ></app-thumbnail-article>
+  }
+</div>
+}
