create a component btn for link to stocks

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,7 @@
 <p>THIS TICKER DOES NOT EXIST</p>
 }
 <div>
+  <app-button-save-link [url]="'/GOOG'" [text]="'GOOG'"></app-button-save-link>
   <a [routerLink]="['/GOOG']">Google</a>
   <a [routerLink]="['/SPY']">S&P500</a>
   <a [routerLink]="['/MSFT']">Microsoft</a>
