--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -1,13 +1,17 @@
 <a
   pButton
   href="{{ url() }}"
-  severity="secondary"
-  class="p-button btn-border-right-none"
+  [text]="true"
+  [raised]="true"
+  class="btn-border-right-none"
 >
   {{ text() }}
 </a>
 <button
   pButton
+  [text]="true"
+  [raised]="true"
+  severity="danger"
   class="btn-border-left-none"
   [icon]="checked ? 'pi pi-heart-fill' : 'pi pi-heart'"
   (click)="checked = !checked"
