--- a/src/app/components/buttons/button-save-link/button-save-link.component.css
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.css
@@ -11,3 +11,8 @@ a {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
+div {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0.7rem;
+}
