--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -1,18 +1,20 @@
-<a
-  pButton
-  href="{{ url() }}"
-  [text]="true"
-  [raised]="true"
-  class="btn-border-right-none"
->
-  {{ text() }}
-</a>
-<button
-  pButton
-  [text]="true"
-  [raised]="true"
-  severity="danger"
-  class="btn-border-left-none"
-  [icon]="checked ? 'pi pi-heart-fill' : 'pi pi-heart'"
-  (click)="checked = !checked"
-></button>
+<div>
+  <a
+    pButton
+    href="{{ url() }}"
+    [text]="true"
+    [raised]="true"
+    class="btn-border-right-none"
+  >
+    {{ text() }}
+  </a>
+  <button
+    pButton
+    [text]="true"
+    [raised]="true"
+    severity="danger"
+    class="btn-border-left-none"
+    [icon]="checked ? 'pi pi-heart-fill' : 'pi pi-heart'"
+    (click)="checked = !checked"
+  ></button>
+</div>
