added nav menu for rangedata

--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -10,6 +10,9 @@
 <button (click)="updateDuration('fiveDays')">5 Days</button>
 <button (click)="updateDuration('oneMonth')">1 Month</button>
 <button (click)="updateDuration('threeMonths')">3 Months</button>
+<div class="card">
+  <p-tabMenu [model]="items" [(activeItem)]="activeItem" />
+</div>
 <app-search-bar (checkEnteredText)="submitInput($event)"></app-search-bar>
 } @if (!data) {
 <h1>LOADING...</h1>
