--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,1 +1,4 @@
 <div echarts [options]="options" class="demo-chart"></div>
+<div class="card">
+  <p-tabMenu [model]="items" [(activeItem)]="activeItem" />
+</div>
