add new style to component

--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -1,5 +1,6 @@
 @if (data1.length && dataXaxis.length) {
 <app-graph
+  class="graphComponent"
   [data1]="data1"
   [data2]="data2"
   [dataXaxis]="dataXaxis"
