--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,4 +1,3 @@
-<div echarts [options]="options" class="demo-chart"></div>
-<div class="card">
-  <p-tabMenu [model]="items" [(activeItem)]="activeItem" />
-</div>
+<div echarts [options]="options" class="chart"></div>
+
+<p-tabMenu [model]="items" [(activeItem)]="activeItem" class="tabmenu" />
