--- a/src/app/pages/stock/stock.component.css
+++ b/src/app/pages/stock/stock.component.css
@@ -3,3 +3,13 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.graphComponent {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
