--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <form class="card flex flex-column md:flex-row gap-3" (ngSubmit)="onSubmit()">
-  <p-inputGroup>
+  <p-inputGroup [style.width.px]="300">
     <input
       type="text"
       pInputText
