saved fav ticers in local storage

--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -15,6 +15,6 @@
     severity="danger"
     class="btn-border-left-none"
     [icon]="checked ? 'pi pi-heart-fill' : 'pi pi-heart'"
-    (click)="checked = !checked"
+    (click)="toggleFavorite()"
   ></button>
 </div>
