updated the ngimg and heart system

--- a/src/app/components/thumbnail-article/thumbnail-article.component.css
+++ b/src/app/components/thumbnail-article/thumbnail-article.component.css
@@ -2,6 +2,11 @@ a {
   text-decoration: none;
 }
 img {
+  position: absolute;
   object-fit: cover;
-  height: auto;
+}
+
+.img-container {
+  position: relative;
+  height: 12rem;
 }
