add a service to deal with tickers

--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -14,7 +14,7 @@
     [raised]="true"
     severity="danger"
     class="btn-border-left-none"
-    [icon]="checked ? 'pi pi-heart-fill' : 'pi pi-heart'"
+    [icon]="checked() ? 'pi pi-heart-fill' : 'pi pi-heart'"
     (click)="toggleFavorite()"
   ></button>
 </div>
