--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p-menubar [model]="items" />
+<p-menubar [model]="items"></p-menubar>
+
+<p-sidebar [(visible)]="sidebarVisible">
+  <!-- Content for  sidebar -->
+  <h1>lorem1000</h1>
+</p-sidebar>
