added stocks research and tooltip

--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -5,6 +5,9 @@
     [text]="true"
     [raised]="true"
     class="btn-border-right-none"
+    pTooltip="{{ tooltipText() }}"
+    tooltipPosition="top"
+    placeholder="Top"
   >
     {{ text() }}
   </a>
