--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,37 +1,40 @@
-<p-card header="Find a Ticker">
-  <app-search-bar (checkEnteredText)="checkInput($event)"></app-search-bar>
-  <p class="p-text-secondary">
-    Having trouble finding your ticker? You can check out
-    <a target="_blank" href="https://stockanalysis.com/stocks/">this link</a>
-    for a complete list of U.S. stocks. Please note, the website you're viewing
-    only displays U.S. stocks.
-  </p>
-</p-card>
+<main>
+  <p-card header="Find a Ticker">
+    <app-search-bar (checkEnteredText)="checkInput($event)"></app-search-bar>
+    <p class="p-text-secondary">
+      Having trouble finding your ticker? You can check out
+      <a target="_blank" href="https://stockanalysis.com/stocks/">this link</a>
+      for a complete list of U.S. stocks. Please note, the website you're
+      viewing only displays U.S. stocks.
+    </p>
+  </p-card>
 
-<p-card
-  header="Most important US stocks"
-  [style]="{ marginTop: '1rem', marginBottom: '1rem' }"
->
-  <div class="tickers-container">
-    @for (item of tickers; track $index) {
-    <app-button-save-link
-      [url]="item.ticker"
-      [text]="item.ticker"
-      [tooltipText]="item.name"
-    ></app-button-save-link>
-    }
-  </div>
-</p-card>
+  <p-card
+    header="Most important US stocks"
+    [style]="{ marginTop: '1rem', marginBottom: '1rem' }"
+  >
+    <div class="tickers-container">
+      @for (item of tickers; track $index) {
+      <app-button-save-link
+        [url]="item.ticker"
+        [text]="item.ticker"
+        [tooltipText]="item.name"
+      ></app-button-save-link>
+      }
+    </div>
+  </p-card>
 
-<h2>News related to finance</h2>
-<div class="containerNews">
-  @if (dataNews().length) { @for (item of dataNews(); track $index) {
-  <app-thumbnail-article
-    [title]="item.title"
-    [imageUrl]="item.urlToImage"
-    [url]="item.url"
-    [description]="item.description"
-  />
+  <p-card header="News related to finance">
+    <div class="containerNews">
+      @if (dataNews().length) { @for (item of dataNews(); track $index) {
+      <app-thumbnail-article
+        [title]="item.title"
+        [imageUrl]="item.urlToImage"
+        [url]="item.url"
+        [description]="item.description"
+      />
 
-  } }
-</div>
+      } }
+    </div>
+  </p-card>
+</main>
