changed style navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,7 @@
-<p-menubar [model]="items"></p-menubar>
+<p-menubar
+  [model]="items"
+  [style]="{ border: 'none', borderRadius: '0', marginBottom: '2rem' }"
+></p-menubar>
 
 <p-sidebar
   [(visible)]="sidebarVisible"
