added responsive to logo

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,18 @@
 .text1 {
   color: #3b82f6;
 }
+
 .text2 {
   color: #ef4444;
 }
+
 .icon {
   padding: 0px 20px;
+}
+
+/* Hide icon on screens smaller than tablets */
+@media (max-width: 960px) {
+  .icon {
+    display: none;
+  }
 }
