add news to home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -29,7 +29,7 @@
       @if (dataNews().length) { @for (item of dataNews(); track $index) {
       <app-thumbnail-article
         [title]="item.title"
-        [imageUrl]="item.urlToImage"
+        [imageUrl]="item.image_url"
         [url]="item.url"
         [description]="item.description"
       />
