changed header home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
   </p-card>
 
   <p-card
-    header="Most important US stocks"
+    header="Prominent US Stocks"
     [style]="{ marginTop: '1rem', marginBottom: '1rem' }"
   >
     <div class="tickers-container">
