fixed issue with css and add possibility to save ticker in stocks page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,4 @@
-<p-menubar
-  [model]="items"
-  [style]="{ border: 'none', borderRadius: '0', marginBottom: '2rem' }"
+<p-menubar [model]="items" [style]="{ border: 'none', borderRadius: '0' }"
   ><ng-template pTemplate="start"
     ><div class="icon">
       <span class="text1">STOCK</span><span class="text2">LENS</span>
